Adds more export formats

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <h1>Tab Saver</h1>
-    <button id="saveTabs">Save all tab URLs to a file</button>
+    <p>Select a file format below</p>
+    <button id="save-as-text">Text</button>
+    <button id="save-as-csv">CSV</button>
+    <button id="save-as-json">JSON</button>
   </body>
 </html>
