Adds ability to download ZIP file containing URL shortcuts

--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,7 @@
     <script src="vendor/lodash.min.js"></script>
     <script src="vendor/Blob.js"></script>
     <script src="vendor/FileSaver.min.js"></script>
+    <script src="vendor/jszip.js"></script>
   </head>
   <body>
     <h1>Tab Saver</h1>
@@ -13,5 +14,6 @@
     <button id="save-as-text">Text</button>
     <button id="save-as-csv">CSV</button>
     <button id="save-as-json">JSON</button>
+    <button id="save-to-zip">ZIP</button>
   </body>
 </html>
